--- a/app/code/Gradus/Catalog/view/adminhtml/layout/catalog_product_compatible.xml
+++ b/app/code/Gradus/Catalog/view/adminhtml/layout/catalog_product_compatible.xml
@@ -7,6 +7,9 @@
 -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <update handle="styles"/>
+    <head>
+        <link src="Gradus_Catalog::css/grid.css"/>
+    </head>
     <body>
         <referenceBlock name="menu">
             <action method="setActive">
