Updates to import page and import running

--- a/app/code/Gradus/Importer/view/adminhtml/layout/importer_import_edit.xml
+++ b/app/code/Gradus/Importer/view/adminhtml/layout/importer_import_edit.xml
@@ -7,6 +7,8 @@
     <body>
         <referenceContainer name="content">
             <block class="Gradus\Importer\Block\Adminhtml\Import\Edit" name="import_edit"/>
+            <block class="Gradus\Importer\Block\Adminhtml\Import\Sample"  name="importer.import.sample"
+                   template="Gradus_Importer::import/sample.phtml"  />
         </referenceContainer>
         <referenceContainer name="left">
             <block class="Gradus\Importer\Block\Adminhtml\Import\Edit\Tabs" name="import_edit_tabs">
