--- a/app/code/Gradus/Importer/view/adminhtml/layout/importer_import_view.xml
+++ b/app/code/Gradus/Importer/view/adminhtml/layout/importer_import_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="admin-2columns-left" xsi:noNamespaceSchemaLocation="../../../../../../../lib/internal/Magento/Framework/View/Layout/etc/page_configuration.xsd">
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="admin-1column" xsi:noNamespaceSchemaLocation="../../../../../../../lib/internal/Magento/Framework/View/Layout/etc/page_configuration.xsd">
     <head>
         <link src="Gradus_Importer::js/datatable.js"/>
         <link src="Gradus_Importer::css/datatable.css"/>
