Samples updated and links upload added

--- a/app/code/Gradus/Importer/view/adminhtml/templates/import/sample.phtml
+++ b/app/code/Gradus/Importer/view/adminhtml/templates/import/sample.phtml
@@ -19,7 +19,7 @@
             case "highlights":
                 jQuery('#sample_div').html("BRAND | DNLA | SKU_NO | SEQNUM | SELL_POINT");
                 break;
-            case "includes":
+            case "inthebox":
             jQuery('#sample_div').html("BRAND | DNLA | SKU_NO | SEQNUM | INCLUDES | INCLUDES_RAW | INCLUDED_QTY | LINK_SKU");
             break;
             case "links":
