--- a/app/code/Gradus/Importer/view/adminhtml/templates/import/view.phtml
+++ b/app/code/Gradus/Importer/view/adminhtml/templates/import/view.phtml
@@ -5,7 +5,7 @@ $mes = json_decode($message);
 ?>
 <div style="font-size:140%"><b>Process: </b><?= $im->getData('process') ?></div>
 
-<table class="bord" id="messages">
+<table style="width:1200px;" class="bord" id="messages">
     <thead>
     <tr>
         <th>Time</th>
