sku links upload is working

--- a/app/code/Gradus/Importer/view/adminhtml/templates/import/view.phtml
+++ b/app/code/Gradus/Importer/view/adminhtml/templates/import/view.phtml
@@ -27,6 +27,11 @@ $mes = json_decode($message);
 </table>
 
 <style>
+    .dataTables_wrapper .dataTables_info {
+        clear:none;
+        margin-left:10px;
+        padding-top:0;
+    }
     .bord {
         border: 1px solid black;
         border-collapse: collapse;
