sticky header added to table

--- a/app/code/Gradus/Importer/view/adminhtml/templates/import/view.phtml
+++ b/app/code/Gradus/Importer/view/adminhtml/templates/import/view.phtml
@@ -6,7 +6,7 @@ $mes = json_decode($message);
 <div style="font-size:140%"><b>Process: </b><?= $im->getData('process') ?></div>
 
 <table style="width:1200px;" class="bord" id="messages">
-    <thead>
+    <thead id="tr_stick" style="background:#ffffff">
     <tr>
         <th>Time</th>
         <th>SKU</th>
