updates to importing

--- a/app/code/Gradus/Importer/view/adminhtml/templates/import/sample.phtml
+++ b/app/code/Gradus/Importer/view/adminhtml/templates/import/sample.phtml
@@ -34,6 +34,12 @@
             case "techspecs":
                 jQuery('#sample_div').html("BRAND | DNLA | SKU_NO | SEQNUM | SPEC_NAME | SPEC_VALUE | SPEC_VALUE_RAW");
                 break;
+            case "metadata":
+                jQuery('#sample_div').html("BRAND | DNLA | SKU_NO | KEYWORD | KEYWORD_DESC");
+                break;
+            case "skulinks":
+                jQuery('#sample_div').html("Item Code | Cust Item Code | Internal SKU | B&H Internal SKU");
+                break;
             default:
                 jQuery('#sample_div').html("Please select a process");
                 break;
