small import updates

--- a/app/code/Gradus/Importer/view/adminhtml/templates/import/sample.phtml
+++ b/app/code/Gradus/Importer/view/adminhtml/templates/import/sample.phtml
@@ -53,6 +53,9 @@
             case "skulinks":
                 jQuery('#sample_div').html("Item Code | Cust Item Code | Internal SKU | B&H Internal SKU");
                 break;
+            case "images":
+                jQuery('#sample_div').html("BRAND | SKU_NO | SEQNUM | CAPTION | FILE_NAME | THUMBNAIL | FULL_URL");
+                break;
             default:
                 jQuery('#sample_div').html("Please select a process");
                 break;
