Updates to product data importing

--- a/app/code/Gradus/Importer/view/adminhtml/templates/import/sample.phtml
+++ b/app/code/Gradus/Importer/view/adminhtml/templates/import/sample.phtml
@@ -56,6 +56,9 @@
             case "images":
                 jQuery('#sample_div').html("BRAND | SKU_NO | SEQNUM | CAPTION | FILE_NAME | THUMBNAIL | FULL_URL");
                 break;
+            case "productData":
+                jQuery('#sample_div').html("BRAND | ITEMCODE | MFGCATALOGNO | B&H | SKU_NO | PRICE | DESCRIPTION | BOX_LENGTH | BOX_HEIGHT | BOX_WIDTH | WEIGHT");
+                break;
             default:
                 jQuery('#sample_div').html("Please select a process");
                 break;
