--- a/app/code/Gradus/InTheBox/view/adminhtml/templates/product/edit/inthebox.phtml
+++ b/app/code/Gradus/InTheBox/view/adminhtml/templates/product/edit/inthebox.phtml
@@ -3,21 +3,34 @@ $tech = $this->getProduct()->getData('in_the_box');
 $info = json_decode($tech, true);
 $count = 1;
 ?>
-<div id="InTheBox_container" style="width:900px; margin:auto;">
+<div id="InTheBox_container" style="width:900px">
     <?php if (count($info) > 0) : ?>
-    <?php foreach ($info as $i) : ?>
-            <?php if (!is_null($i)) : ?>
-        <div class="specs_row" id="in_the_box_<?= $count ?>">
-            <div class="draggable-handle"></div>
-            <label for="in_the_box_value_<?= $count ?>">In The Box <?= $count ?></label>
-            <input id="in_the_box_value_<?= $count ?>" style="width:30%;" data-form-part="product_form" value="<?= $i['value'] ?>" name="in_the_box[<?= $count ?>][value]" />
-            <label for="in_the_box_count_<?= $count ?>">Amount <?= $count ?></label>
-            <input id="in_the_box_count_<?= $count ?>" style="width:30%;" data-form-part="product_form" value="<?= $i['count'] ?>" name="in_the_box[<?= $count ?>][count]" />
-        <a class="delete_icon" src="javascript:void(0)" onclick="deleteinthebox('in_the_box_<?= $count ?>//////')"></a>
-        </div>
-        <?php $count++ ?>
+        <?php foreach ($info as $i) : ?>
+            <?php if (isset($i['count']) && isset($i['value'])) : ?>
+                <div class="gradus_fields" id="in_the_box_<?=  $count ?>">
+                    <div class="draggable-handle inthebox_drag"><b><?= $count ?></b></div>
+                    <label class="gradus_label" for="in_the_box_amount_<?= $count ?>">Qty</label>
+                    <input name="in_the_box[<?= $count ?>][count]" data-form-part="product_form" style="margin-left:6px;" class="gradus_text_mini"
+                    id="in_the_box_amount_<?= $count ?>" value="<?= $i['count'] ?>" />
+                    <label class="gradus_label" for="in_the_box_value_<?= $count ?>'">Item</label>
+                    <input name="in_the_box[<?= $count ?>][value]" data-form-part="product_form" style="margin-left:6px; width:58%"
+                    class="gradus_text_medium" style="width:70%" id="in_the_box_value_<?= $count ?>" value="<?= $i['value'] ?>" />
+                    <a src="javascript:void(0)" style="margin-left:6px;" onclick="deleteinthebox('in_the_box_<?= $count ?>')">
+                        <img style="width:20px;" src="<?= $this->getViewFileUrl('Gradus_Catalog::images/trash.png') ?>"></a></div>
+                <?php $count++ ?>
             <?php endif ?>
-    <?php endforeach ?>
+        <?php endforeach ?>
+    <?php else: ?>
+        <div class="gradus_fields" id="in_the_box_<?= $count ?>">
+            <div class="draggable-handle inthebox_drag"><b>1</b></div>
+            <label class="gradus_label" for="in_the_box_amount_<?= $count ?>">Qty</label>
+            <input name="in_the_box[<?= $count ?>][count]" data-form-part="product_form" style="margin-left:6px;" class="gradus_text_mini"
+                   id="in_the_box_amount_<?= $count ?>" value="" />
+            <label class="gradus_label" for="in_the_box_value_<?= $count ?>">Item</label>
+            <input name="in_the_box[<?= $count ?>][value]" data-form-part="product_form" style="margin-left:6px; width:58%"
+                   class="gradus_text_medium" style="width:70%" id="in_the_box_value_<?= $count ?>" value="" />
+            <a src="javascript:void(0)" style="margin-left:6px;" onclick="deleteinthebox('in_the_box_<?= $count ?>')">
+                <img style="width:20px;" src="<?= $this->getViewFileUrl('Gradus_Catalog::images/trash.png') ?>"></a></div>
     <?php endif ?>
 </div>
 <button class="action-secondary" style="margin-right:5px; margin-top:5px" onclick="addinthebox()">Add InTheBox</button>
@@ -49,14 +62,14 @@ $count = 1;
 
         vals +='<div style="margin:auto" class="gradus_fields" id="in_the_box_'+clb+'">';
         vals +='<div class="draggable-handle inthebox_drag"><b>'+clb+'</b></div>';
-        vals += '<label class="gradus_label" for="in_the_box_amount_'+clb+'">Amount</label>';
-        vals += '<input name="in_the_box['+clb+'][count]" data-form-part="product_form" style="margin-left:6px;" class="gradus_text_mini"';
+        vals += '<label class="gradus_label" for="in_the_box_amount_'+clb+'">Qty</label>';
+        vals += '<input name="in_the_box['+clb+'][count]" data-form-part="product_form" style="margin-left:13px;" class="gradus_text_mini"';
         vals += 'id="in_the_box_amount_'+clb+'" value="" />';
-        vals += '<label class="gradus_label" for="in_the_box_value_'+clb+'">Item</label>';
-        vals += '<input name="in_the_box['+clb+'][value]" data-form-part="product_form" style="margin-left:6px; width:58%"';
+        vals += '<label class="gradus_label" style="margin-left:6px;" for="in_the_box_value_'+clb+'">Item</label>';
+        vals += '<input name="in_the_box['+clb+'][value]" data-form-part="product_form" style="margin-left:8px; width:58%"';
         vals += 'class="gradus_text_medium" style="width:70%" id="in_the_box_value_'+clb+'" value="" />';
         vals += '<a src="javascript:void(0)" style="margin-left:6px;" onclick="deleteinthebox(\'in_the_box_'+clb+'\')">';
-        vals += '<img style="width:20px;" src="<?= $this->getViewFileUrl('Gradus_Catalog::images/trash.png') ?>"></a></div>';
+        vals += '<img style="width:20px; margin-left:5px;" src="<?= $this->getViewFileUrl('Gradus_Catalog::images/trash.png') ?>"></a></div>';
 
         $q('#InTheBox_container').append(vals);
     }
