--- a/app/code/Gradus/Features/view/adminhtml/templates/product/edit/features.phtml
+++ b/app/code/Gradus/Features/view/adminhtml/templates/product/edit/features.phtml
@@ -1,30 +1,42 @@
 <?php
-$tech = $this->getProduct()->getData('features');
+$tech = $this->getProduct()->getData('highlights');
 $info = json_decode($tech, true);
 $count = 1;
 ?>
-
-<div id="features_container">
-    <?php if (count($info) > 0) : ?>
-    <?php foreach ($info as $i) : ?>
-            <?php if (isset($i['name']) && isset($i['desc'])) : ?>
-                <div style="margin:auto" class="gradus_fields" id="features_<?= $count ?>">
-                    <div class="draggable-handle features_drag"><b><?= $count ?></b></div>
-                    <label class="gradus_label" for="feat_n_<?= $count ?>">Label</label>
-                    <input style="margin-bottom:5px;" name="features[<?= $count ?>][name]" data-form-part="product_form" class="gradus_text_large" id="feat_n_<?= $count ?>" value="<?= $i['name'] ?>" />
-                    <div style="line-break:auto" />
-                    <label style="margin-left:18px" class="gradus_label" for="feat_d_<?= $count ?>">Feature</label>
-                    <textarea data-form-part="product_form" name="features[<?= $count?>][desc]" style="margin-top:5px; width:79.5%;" class="gradus_text_large" id="feat_d_<?= $count ?>">
-                        <?= $i['desc'] ?></textarea>
-                    <a src="javascript:void(0)" onclick="deleteFeature('features_<?= $count ?>')">
-                        <img style="width:20px;" src="<?= $this->getViewFileUrl('Gradus_Catalog::images/trash.png') ?>">
-                    </a>
-                    <?php $count++ ?>
-                </div>
-            <?php endif ?>
-    <?php endforeach ?>
+<div style="width:800px;" id="features_container">
+    <table id="features_table" class="admin__dynamic-rows data-grid">
+        <thead>
+        <tr>
+            <th class="data-grid-draggable-row-cell"></th>
+            <th class="data-grid-th position" style="width:30px"><span>Seq</span></th>
+            <th class="data-grid-th"><span>Feature Label</span></th>
+            <th class="data-grid-th"><span>Feature Value</span></th>
+            <th style="width:100px"/>
+        </tr>
+        </thead>
+        <tbody>
+        <?php if (count($info) > 0) : ?>
+        <?php foreach ($info as $i) : ?>
+            <tr id="features_row_<?= $count ?>">
+                <td class=""data-grid-draggable-row-cell">
+                <div class="draggable-handle3"></div>
+                </td>
+                <td class="posrow">
+                    <?= $count ?>
+                </td>
+                <td>
+                    <input name="features[<?= $count ?>][name]" data-form-part="product_form" name="features[<?= $count ?>[name]" style="width:100%; padding:3px;" value="<?= $i ?>" />
+                </td>
+                <td><textarea name="features[<?= $count?>][desc]" data-form-part="product_form" style="width:100%;"></textarea></td>
+                <td><a onclick="deleteHighlight('highlight_row_<?= $count ?>')" href"#">Remove</a></td>
+            </tr>
+            <?php $count++ ?>
+        <?php endforeach; ?>
+        </tbody>
+    </table>
     <?php endif ?>
 </div>
+
 <button class="action-secondary" style="margin-right:5px;" onclick="addFeature()">Add Feature</button>
 <div class="select_pad">
     <select class="search_select" id="copy_from_feature">
@@ -53,8 +65,8 @@ $count = 1;
     }
 
     $q( document ).ready(function() {
-        $q('#features_container').sortable({
-            handle: '.draggable-handle',
+        $q('#features_container > table > tbody').sortable({
+            handle: '.draggable-handle3',
             revert: 300,
             placeholder: "jqplaceholder",
             tolerance: "intersect",
@@ -68,21 +80,16 @@ $count = 1;
     });
     function addFeature()
     {
-        var counts = $q('#features_container input').length;
+        var counts = $q('#features_table > tbody > tr').length;
         var clb = counts+1;
-        var q = '';
-        q += '<div style="margin:auto" class="gradus_fields" id="features_'+clb+'">';
-        q += '<div class="draggable-handle features_drag"><b>'+clb+'</b></div>';
-        q += '<label class="gradus_label" for="feat_n_'+clb+'">Label</label>';
-        q += '<input style="margin-bottom:5px" name="features['+clb+'][name]" data-form-part="product_form" class="gradus_text_large" id="feat_n_'+clb+'" value="" />';
-        q += '<div style="line-break:auto" />';
-        q += '<label style="margin-left:18px" class="gradus_label" for="feat_d_'+clb+'">Feature</label>';
-        q += '<textarea data-form-part="product_form" name="features['+clb+'][desc]" style="width:79.5%; top-margin:5px;" data-form-part="product_form" class="gradus_text_large" id="feat_d_'+clb+'>" value=""></textarea>';
-        q += '<a src="javascript:void(0)" style="margin-left:6px;" onclick="deleteFeature(\'features_'+clb+'\')">';
-        q += '<img style="width:20px;" src="<?= $this->getViewFileUrl('Gradus_Catalog::images/trash.png') ?>"></a></div>';
-
-        $q('#features_container').append
-        (q);
+        q = '<tr id="features_row_'+clb+'">'+
+            '<td class="data-grid-draggable-row-cell">'+
+            '<div class="draggable-handle3"></div></td>'+
+            '<td class="posrow">'+clb+'</td><td>'+
+            '<input name="features['+clb+'][name]" data-form-part="product_form" id="features[' + clb + '][name]" style="width:100%; padding:3px;" value="" /></td>'+
+            '<td><textarea name="features['+clb+'][desc]" data-form-part="product_form" style="width:100%;"></textarea></td>'+
+            '</td><td><a href"#" onclick="deleteFeature(\'features_row_'+clb+'\')">Remove</a></td></tr>';
+        $q('#features_table > tbody').append(q);
     }
 
     function deleteFeature(h)
