--- a/app/code/Gradus/Highlights/view/adminhtml/templates/product/edit/highlights.phtml
+++ b/app/code/Gradus/Highlights/view/adminhtml/templates/product/edit/highlights.phtml
@@ -2,21 +2,11 @@
     var $q = jQuery.noConflict();
 
     $q( document ).ready(function() {
-        $q('#highlight_container > table > tbody').sortable({
+        $q('#highlight_table > tbody').sortable({
             handle: '.draggable-handle3',
             revert: 300,
             placeholder: "jqplaceholder",
             tolerance: "intersect",
-            update: function( event, ui ) {
-                $q('.highlight_drag').each(function(i, obj) {
-                    var ii = i+1;
-                    $q(this).html(ii);
-                })
-                $q('.posrow').each(function(i, obj) {
-                    var ii = i+1;
-                    $q(this).html(ii);
-                })
-            }
         }).disableSelection();
 
     });
@@ -76,10 +66,23 @@ $count = 1;
             </td>
             <td><a onclick="deleteHighlight('highlight_row_<?= $count ?>')" href"#">Remove</a></td>
         </tr>
-        <?php $count++ ?>
-    <?php endforeach; ?>
+                <?php $count++ ?>
+            <?php endforeach; ?>
+        <?php else : ?>
+            <tr id="highlight_row_<?= $count ?>">
+                <td class=""data-grid-draggable-row-cell">
+                <div class="draggable-handle3"></div>
+                </td>
+                <td class="posrow">
+                    <?= $count ?>
+                </td>
+                <td>
+                    <input data-form-part="product_form" name="highlights[<?= $count ?>[value]" style="width:100%; padding:3px;" value="" />
+                </td>
+                <td><a onclick="deleteHighlight('highlight_row_<?= $count ?>')" href"#">Remove</a></td>
+            </tr>
+        <?php endif ?>
         </tbody>
         </table>
-    <?php endif ?>
 </div>
 <button class="action-secondary" style="margin-right:5px;" onclick="addHighlight()">Add Highlight</button>
