--- a/app/code/Gradus/InTheBox/view/adminhtml/templates/product/edit/inthebox.phtml
+++ b/app/code/Gradus/InTheBox/view/adminhtml/templates/product/edit/inthebox.phtml
@@ -3,36 +3,54 @@ $tech = $this->getProduct()->getData('in_the_box');
 $info = json_decode($tech, true);
 $count = 1;
 ?>
-<div id="InTheBox_container" style="width:900px">
-    <?php if (count($info) > 0) : ?>
+<div style="width:800px;" id="InTheBox_container">
+    <table id="InTheBox_table" class="admin__dynamic-rows data-grid">
+        <thead>
+        <tr>
+            <th class="data-grid-draggable-row-cell"></th>
+            <th class="data-grid-th position" style="width:30px"><span>Seq</span></th>
+            <th class="data-grid-th" style="width:50px;"><span>Include Count</span></th>
+            <th class="data-grid-th"><span>Include Value</span></th>
+            <th style="width:100px"/>
+        </tr>
+        </thead>
+        <tbody>
+        <?php if (count($info) > 0) : ?>
         <?php foreach ($info as $i) : ?>
-            <?php if (isset($i['count']) && isset($i['value'])) : ?>
-                <div class="gradus_fields" id="in_the_box_<?=  $count ?>">
-                    <div class="draggable-handle inthebox_drag"><b><?= $count ?></b></div>
-                    <label class="gradus_label" for="in_the_box_amount_<?= $count ?>">Qty</label>
-                    <input name="in_the_box[<?= $count ?>][count]" data-form-part="product_form" style="margin-left:6px;" class="gradus_text_mini"
-                    id="in_the_box_amount_<?= $count ?>" value="<?= $i['count'] ?>" />
-                    <label class="gradus_label" for="in_the_box_value_<?= $count ?>'">Item</label>
-                    <input name="in_the_box[<?= $count ?>][value]" data-form-part="product_form" style="margin-left:6px; width:58%"
-                    class="gradus_text_medium" style="width:70%" id="in_the_box_value_<?= $count ?>" value="<?= $i['value'] ?>" />
-                    <a src="javascript:void(0)" style="margin-left:6px;" onclick="deleteinthebox('in_the_box_<?= $count ?>')">
-                        <img style="width:20px;" src="<?= $this->getViewFileUrl('Gradus_Catalog::images/trash.png') ?>"></a></div>
-                <?php $count++ ?>
-            <?php endif ?>
-        <?php endforeach ?>
-    <?php else: ?>
-        <div class="gradus_fields" id="in_the_box_<?= $count ?>">
-            <div class="draggable-handle inthebox_drag"><b>1</b></div>
-            <label class="gradus_label" for="in_the_box_amount_<?= $count ?>">Qty</label>
-            <input name="in_the_box[<?= $count ?>][count]" data-form-part="product_form" style="margin-left:6px;" class="gradus_text_mini"
-                   id="in_the_box_amount_<?= $count ?>" value="" />
-            <label class="gradus_label" for="in_the_box_value_<?= $count ?>">Item</label>
-            <input name="in_the_box[<?= $count ?>][value]" data-form-part="product_form" style="margin-left:6px; width:58%"
-                   class="gradus_text_medium" style="width:70%" id="in_the_box_value_<?= $count ?>" value="" />
-            <a src="javascript:void(0)" style="margin-left:6px;" onclick="deleteinthebox('in_the_box_<?= $count ?>')">
-                <img style="width:20px;" src="<?= $this->getViewFileUrl('Gradus_Catalog::images/trash.png') ?>"></a></div>
+            <tr id="inthebox_row_<?= $count ?>">
+                <td class=""data-grid-draggable-row-cell">
+                <div class="draggable-handle_inthebox"></div>
+                </td>
+                <td class="posrow">
+                    <?= $count ?>
+                </td>
+                <td>
+                    <input name="inthebox[<?= $count ?>][count]" data-form-part="product_form" name="inthebox[<?= $count ?>[count]" style="width:100%; padding:3px;" value="<?= $i["count"] ?>" />
+                </td>
+                <td><textarea name="inthebox[<?= $count?>][value]" data-form-part="product_form" style="width:100%;"><?= $i['value'] ?></textarea></td>
+                <td><a onclick="deleteinthebox('inthebox_row_<?= $count ?>')" href"#">Remove</a></td>
+            </tr>
+            <?php $count++ ?>
+        <?php endforeach; ?>
+        </tbody>
+    </table>
+    <?php else : ?>
+        <tr id="inthebox_row<?= $count ?>">
+            <td class=""data-grid-draggable-row-cell">
+            <div class="draggable-handle_inthebox"></div>
+            </td>
+            <td class="posrow">
+                <?= $count ?>
+            </td>
+            <td>
+                <input name="inthebox[<?= $count ?>][name]" data-form-part="product_form" style="width:100%; padding:3px;" value="" />
+            </td>
+            <td><textarea name="inthebox[<?= $count?>][desc]" data-form-part="product_form" style="width:100%;"></textarea></td>
+            <td><a onclick="deleteFeature('inthebox_row_<?= $count ?>')" href"#">Remove</a></td>
+        </tr>
     <?php endif ?>
 </div>
+
 <button class="action-secondary" style="margin-right:5px; margin-top:5px" onclick="addinthebox()">Add InTheBox</button>
 <div class="select_pad">
     <select class="search_select" id="copy_from_inthebox">
@@ -47,7 +65,7 @@ $count = 1;
 <script>
     var $q = jQuery.noConflict();
     $q( document ).ready(function() {
-        $q('#InTheBox_container').sortable({
+        $q('#InTheBox_table > tbody').sortable({
             handle: '.draggable-handle',
             revert: 300,
             placeholder: "ui-state-in_the_box myHover",
@@ -56,22 +74,16 @@ $count = 1;
     });
     function addinthebox()
     {
-        var counts = $q('#InTheBox_container .gradus_fields').length;
+        var counts = $q('#InTheBox_table > tbody > tr').length;
         var clb = counts+1;
-        var vals = '';
-
-        vals +='<div style="margin:auto" class="gradus_fields" id="in_the_box_'+clb+'">';
-        vals +='<div class="draggable-handle inthebox_drag"><b>'+clb+'</b></div>';
-        vals += '<label class="gradus_label" for="in_the_box_amount_'+clb+'">Qty</label>';
-        vals += '<input name="in_the_box['+clb+'][count]" data-form-part="product_form" style="margin-left:13px;" class="gradus_text_mini"';
-        vals += 'id="in_the_box_amount_'+clb+'" value="" />';
-        vals += '<label class="gradus_label" style="margin-left:6px;" for="in_the_box_value_'+clb+'">Item</label>';
-        vals += '<input name="in_the_box['+clb+'][value]" data-form-part="product_form" style="margin-left:8px; width:58%"';
-        vals += 'class="gradus_text_medium" style="width:70%" id="in_the_box_value_'+clb+'" value="" />';
-        vals += '<a src="javascript:void(0)" style="margin-left:6px;" onclick="deleteinthebox(\'in_the_box_'+clb+'\')">';
-        vals += '<img style="width:20px; margin-left:5px;" src="<?= $this->getViewFileUrl('Gradus_Catalog::images/trash.png') ?>"></a></div>';
-
-        $q('#InTheBox_container').append(vals);
+        q = '<tr id="inthebox_row_'+clb+'">'+
+            '<td class="data-grid-draggable-row-cell">'+
+            '<div class="draggable-handle_inthebox"></div></td>'+
+            '<td class="posrow">'+clb+'</td><td>'+
+            '<input name="inthebox['+clb+'][name]" data-form-part="product_form" id="inthebox[' + clb + '][name]" style="width:100%; padding:3px;" value="" /></td>'+
+            '<td><textarea name="inthebox['+clb+'][desc]" data-form-part="product_form" style="width:100%;"></textarea></td>'+
+            '</td><td><a href"#" onclick="deleteinthebox(\'inthebox_row_'+clb+'\')">Remove</a></td></tr>';
+        $q('#InTheBox_table > tbody').append(q);
     }
 
     function deleteinthebox(h)
